--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-calendar-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@babel/types": "^7.25.6",
     "@clerk/clerk-react": "^5.9.1",
